[project]
name = "docsearch-scraper"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "scrapy==2.12.0",
    "pyperclip==1.9.0",
    "python-dotenv==1.0.1",
    "ratelimit==2.2.1",
    "selenium==4.27.0",
    "slacker==0.14.0",
    "tldextract==5.1.3",
    "pytest==8.3.3",
    "requests-iap==0.2.0",
    "python-helpscout-v2==2.0.0",
    "algoliasearch==2.6.3",
    "python-keycloak-client==0.2.3",
    "webdriver-manager==4.0.2",
    "typesense==0.20.0",
]

[project.optional-dependencies]
dev = [
    "pylint==3.2.6",
]
